--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 Hello World
+
+Professional Experience
+
+2021 - 2022
+Refer to PR in DH (Apr - Dec)
+
+2020 - 2021
+Bought by DH (Apr)
+
+2019 - 2020 
+Refer to PR in MD (Sept - Sept)
+
