--- a/index.html
+++ b/index.html
@@ -11,3 +11,26 @@ Bought by DH (Apr)
 2019 - 2020 
 Refer to PR in MD (Sept - Sept)
 
+Reference
+PROG: "Nurture Ohio is a web-based system that collects, stores and shares data for both the electronic Pregnancy Risk
+Assessment Form (PRAF 2.0) and the Report of Pregnancy (ROP) forms."
+GEMINI: "Gemini, a mobile-first patient engagement application, conveniently connects patients to their health
+system's digital front door."
+
+About GEMINI:
+High-Quality User Experiences
+1. Platform Capabilities: Gemini provides the user with the ability to control and administer their applications in 
+real-time. 
+2. Your Portal: An administrative portal with the ability to manage your programming in real-time.
+3. Your App: Fully managed applications for your Patients and Families that continue to grow as the industry does.
+
+Feature Rich
+Our patient-facing applications are full featured, highly customized, and rapidly evolving to keep pace 
+with consumer patient expectations. 
+
+Electronic Health Record; Find a Doctor; Find a Location Includes Urgent Care; 
+Find a Service; Health Risk Assessment; Emergency Management; Notifications; Launch 3rd Party Apps; Wayfinding; 
+Clinical Trials; Quick Links / Toolbar Options; Blog / News; App Review / Ratings; Social Media
+
+Integrations & Partnerships
+Epic, HealthGrade, Algolia, etc
