--- a/index.html
+++ b/index.html
@@ -11,3 +11,14 @@ Bought by DH (Apr)
 2019 - 2020 
 Refer to PR in MD (Sept - Sept)
 
+Accomplishment
+2019 - 2020 
+1. Work on PROG
+  1) New Feature Backend Code Migration from view to controller for better code mantenance
+  3) More Aware of Security on codebase
+2. Work on NCH 
+  1) Analytics Code Migration from view to controller for decresing loading speed
+  2) JQuery -> VueJS
+3. Work on Upgrade 
+  1) Laravel PHP -> 7.2
+  2) Laravel Framework -> 5.8
